--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <div class="footItem">
+            <divm class="footItem">
                 <h4>Discover Deliveroo</h4>
                 <ul>
                     <li><a href="https://corporate.deliveroo.co.uk/">Investors</a></li>
@@ -348,7 +348,7 @@
                     <li><a href="">Become a rider</a></li>
 
                 </ul>
-            </div>
+            </divm>
             <div class="footItem">
                 <h4>Legal</h4>
                 <ul>
@@ -371,14 +371,16 @@
                 <a href=""><img src="images/app-store-badges-google-play.png" alt=""></a>
                 <a href=""><img src="images/app-store-badges-apple.png" alt=""></a>
             </div>
-
-            <div class="copyrightInfo width-15">
+            <div class="social-copyright">
                 <div class="socialLinks">
                     <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i><img src="" alt=""></a>
                     <a href="https://x.com/"><i class="fa-brands fa-twitter"></i><img src="" alt=""></a>
                     <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i><img src="" alt=""></a>
+                </div>
+                <div class="copyrightInfo">
                     <p>© 2025 Deliveroo</p>
                 </div>
+
             </div>
 
         </div>
